fix spacing words

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,7 +56,7 @@ figure img {
     font-size: 1.1rem;
     text-align: justify;
     letter-spacing: .1px;
-    word-spacing: -2px;
+    word-spacing: -3px;
     padding: 5% 10%;
     
 }
@@ -74,10 +74,10 @@ footer p {
 }
 
 /* media query for mobile in portrait */
-@media only screen and (orientation: portrait) and (max-width: 424px) {
+@media only screen and (orientation: portrait) and (max-width: 426px) {
     .bio p {
         font-size: 0.875rem;
-        word-spacing: -3px;
+        word-spacing: -2.91px;
     }
 
     h1 {
